<resources>
    <string name="app_name">Street Art Orlando</string>
    <string name="explore">Explore</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_message">Create an account to submit photos or save favorites</string>
    <string name="submit_photo">Submit Photo</string>
    <string name="my_photos">My Photos</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="privacy">Privacy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="photos">photos</string>
    <string name="version_statement">Street Art Orlando 1.0 (108)</string>
    <string name="agree_with_terms_conditions"><![CDATA[Agree with Terms & Conditions]]></string>
    <string name="email">Email</string>
    <string name="email_confirmation">Email Confirmation</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="update_password">Update Password</string>
    <string name="photo">Photo</string>
    <string name="art_work">Art Work</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="login_required_to_save_favorites">Login required to save favorites.</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_security_code">Have Security Code?</string>
    <string name="send_security_code">Send Security Code</string>
    <string name="new_password">New Password</string>
    <string name="security_code_xxxxxx">Security Code XXXXXX</string>
    <string name="submitted_by">Submitted by: \</string>
    <string name="art_title_optional">Art Title (Optional)</string>
    <string name="artist_name_optional">Artist name (Optional)</string>
    <string name="location_notes_optional">Location Notes (Optional)</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="sd_card">sdcard/</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="logged_in_submit_photo">You must be logged in to submit photos.</string>
    <string name="logged_in_your_photo">You must be logged in to view your photos.</string>
    <string name="no_title_provided">No Title Provided</string>
    <string name="no_artist_provided">No Artist Provided</string>
    <string name="pending">Pending</string>
</resources>
