<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        style="@style/EditText"/>

    <EditText
        android:id="@+id/edit_email_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="2dp"
        style="@style/EditText"
        android:hint="@string/email_confirmation"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="2dp"
        style="@style/EditText"
        android:hint="@string/nickname"
        app:layout_constraintTop_toBottomOf="@id/edit_email_confirm"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/edit_nickname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/EditText"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/layout_agree_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout">

        <Button
            android:id="@+id/button_agree_terms"
            style="@style/SettingsPurpleButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:text="@string/agree_with_terms_conditions"
            android:textAlignment="textStart" />

        <Switch
            android:id="@+id/switch_agree_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_alignEnd="@id/button_agree_terms"
            android:layout_centerVertical="true"
            android:elevation="2dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/White"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/layout_agree_terms"/>
</android.support.constraint.ConstraintLayout>