<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPhotoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/photo"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@id/imageUpload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageUpload"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerInside"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoLabel"
            app:srcCompat="@drawable/camera_icon_3x" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoLabel"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/imageUpload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/etTitle"
                style="@style/EditText"
                android:hint="@string/art_title_optional"/>

            <View
                android:id="@+id/divider1"
                style="@style/DividerLine" />

            <EditText
                android:id="@+id/etArtist"
                style="@style/EditText"
                android:hint="@string/artist_name_optional"/>

            <View
                android:id="@+id/divider2"
                style="@style/DividerLine" />

            <EditText
                android:id="@+id/etLocationNotes"
                style="@style/EditText"
                android:hint="@string/location_notes_optional"/>

            <View
                android:id="@+id/divider3"
                style="@style/DividerLine" />

            <EditText
                android:id="@+id/etDescription"
                style="@style/EditText"
                android:hint="@string/description_optional"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/location"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <fragment
            android:id="@+id/mapViewFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationLabel" />


        <Button
            android:id="@+id/btnSubmitPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/submit_photo"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mapViewFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>