<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/EditText"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            android:visibility="gone"
            tools:visibility="visible">

            <EditText
                android:id="@+id/edit_password"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                style="@style/EditText" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvHaveCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_security_code"
            android:textColor="@color/colorPrimary"
            android:padding="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"/>

        <Button
            android:id="@+id/btnSendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/send_security_code"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvHaveCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>