<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        style="@style/EditText"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/layout_email">

        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/EditText" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/White"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>