<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPhotoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/photo"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imgFavorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/favorites"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/imgArtwork"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart_icon_3x"
            android:tint="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/imgArtwork"
            android:layout_width="0dp"
            android:layout_height="257dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoLabel"
            tools:srcCompat="@drawable/dummy_graffiti_1"
            android:contentDescription="@string/art_work" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgArtwork">

            <TextView
                android:id="@+id/tvImageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="Image Title" />

            <View style="@style/DividerLine" />

            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="Artists Name" />

            <View style="@style/DividerLine" />

            <TextView
                android:id="@+id/tvSubmittedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="Submitted by:" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/White"
            android:padding="12dp"
            tools:text="Description text goes here"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />

        <TextView
            android:id="@+id/tvLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/location"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="243dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationLabel" />

        <TextView
            android:id="@+id/tvLocationNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:background="@color/White"
            android:padding="12dp"
            tools:text="Location Notes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>